tests/paczka1/small_fuzzy/55647385.err
Error in line 1: LlUfo S177 70,8
Error in line 4: 1CuDSOFFX A121 36,0
Error in line 5: LlUfo S793 91,3
